Fix runner and allow suppressing warnings for flink and spark